[project]
name = "hash-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.9.1",
    "pydantic[settings]>=2.11.4",
    "python-dotenv>=1.1.0",
    "redis>=6.0.0",
    "uvicorn>=0.34.2",
]
